# xAndroidDemo

./: .gitignore  .project  README.md  build.gradle  gradle.properties  settings.gradle  settings.gradle.kts
app/: build.gradle  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: Secret.json  TestData.json  _MMGJ_20220627_160645.xls  aip.license  resources.json  resources.txt  test.json
app/src/main/cpp/: CMakeLists.txt  logger.cpp  logger.hpp  vision_core.cpp  yuv.cpp  yuv.hpp
app/src/main/res/anim/: activity_in.xml  activity_out.xml  popup_hide.xml  popup_show.xml
app/src/main/res/animator/: jump_to_down.xml
app/src/main/res/drawable/: bg_audio_view.xml  bg_border_color_white.xml  bg_btn_normal_color_1.xml  bg_btn_press_color_1.xml  bg_btn_press_selector_1.xml  bg_button.xml  bg_edittext.xml  bg_layout_button_highlight.xml  bg_progress.xml  bg_progress_bar.xml  bg_progress_bar_high.xml  bg_progress_bar_low.xml  bg_progress_bar_middle_high.xml  bg_progress_bar_middle_low.xml  bg_solid_layout_black_radius_15.xml  bg_solid_layout_blue_3.xml  bg_solid_layout_white_radius_10.xml  bg_solid_text_blue_radius_top_5.xml  bg_stroke_layout_blue.xml  bg_tag.xml  bg_text.xml  bottom_text_color.xml  center_circle_selector.xml  direction_point_selector.xml  fab_label_background.xml  ic_add_black.xml  ic_add_pic.xml  ic_add_white.xml  ic_aim.xml  ic_alarm.xml  ic_alarm_selected.xml  ic_audio_icon1.xml  ic_audio_icon2.xml  ic_audio_icon3.xml  ic_azimuth.xml  ic_chart_dot.xml  ic_china.xml  ic_delete.xml  (+41 more)
gradle/wrapper/: gradle-wrapper.properties
(+857 files in other folders)
